@@ -67,13 +67,14 @@ t/Wikibase-Datatype-Item/02-version.t
 t/Wikibase-Datatype-Item/03-new.t
 t/Wikibase-Datatype-Item/04-aliases.t
 t/Wikibase-Datatype-Item/05-descriptions.t
-t/Wikibase-Datatype-Item/06-labels.t
-t/Wikibase-Datatype-Item/07-lastrevid.t
-t/Wikibase-Datatype-Item/08-modified.t
-t/Wikibase-Datatype-Item/09-ns.t
-t/Wikibase-Datatype-Item/10-sitelinks.t
-t/Wikibase-Datatype-Item/11-statements.t
-t/Wikibase-Datatype-Item/12-title.t
+t/Wikibase-Datatype-Item/06-id.t
+t/Wikibase-Datatype-Item/07-labels.t
+t/Wikibase-Datatype-Item/08-lastrevid.t
+t/Wikibase-Datatype-Item/09-modified.t
+t/Wikibase-Datatype-Item/10-ns.t
+t/Wikibase-Datatype-Item/11-sitelinks.t
+t/Wikibase-Datatype-Item/12-statements.t
+t/Wikibase-Datatype-Item/13-title.t
 t/Wikibase-Datatype-Lexeme/01-use.t
 t/Wikibase-Datatype-Lexeme/02-version.t
 t/Wikibase-Datatype-Lexeme/03-new.t
